align navbar correctly and send data post from signup

--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,3 @@
-html,
-body {
-    height: 100%;
-    width: 100%;
-}
 
 input{
     font-size: 17px;
@@ -34,8 +29,6 @@ input{
 
 .b {
     background-image: url("/static/img.png");
-    width: 100%;
-    height: 100%;
     opacity: 1;
     background-repeat: no-repeat;
     background-size: cover;
@@ -87,7 +80,24 @@ h5 {
     margin: 10%;
     background-color: white;
     border-radius: 12px;
-    size: 10%;
+}
+
+.navbar-brand{
+    color: white!important;
+}
+
+.noob{
+    padding-left: 25px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-right-width: 0px;
+    border-left-width: 0px;
+    padding-right: 7px;
+}
+
+.nav-item{
+    background-color: white;
+    border-radius: 12px;
 }
 
 .nav-link{
